--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,4 +9,16 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 
+    <link rel="alternate" type="application/rss+xml" title="The Bitledger Blog" href="http://bitledger.io/feed.xml">
+
+    <link href="http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic"
+          rel="stylesheet" type="text/css">
+
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+
+    <link rel="stylesheet" href="/css/darcula.css">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/bitledger.css">
+    <link rel="stylesheet" href="/css/mobile.css" media="only screen and (max-device-width: 480px)">
 </head>
