Apply custom CSS and tweak templates
With thanks to Benjamin Winterberg for his permission to copy.

See: https://twitter.com/cbeams/status/474627297212137472

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,19 +1,11 @@
 <!DOCTYPE html>
-<html>
-
-  {% include head.html %}
-
-    <body>
-
-    {% include header.html %}
-
-    <div class="page-content">
-      <div class="wrap">
-      {{ content }}
-      </div>
+<html lang="en">
+{% include head.html %}
+  <body>
+    <div class="site">
+{% include header.html %}
+{{ content }}
+{% include footer.html %}
     </div>
-
-    {% include footer.html %}
-
-    </body>
+  </body>
 </html>
