--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,18 +1,18 @@
-<head>
+  <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-    <meta name="viewport" content="width=device-width">
+
+    <meta name="author" content="Chris Beams">
     <meta name="description" content="{{ site.description }}">
+    <meta name="keywords" content="bitcoin, blockchain, ledger, Java, JVM, library, framework, toolkit, API">
+
+    <meta name="viewport" content="width=device-width">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
-
     <link rel="alternate" type="application/rss+xml" title="The Bitledger Blog" href="http://bitledger.io/feed.xml">
-
-    <link href="http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic"
-          rel="stylesheet" type="text/css">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic">
 
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
@@ -21,4 +21,4 @@
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/bitledger.css">
     <link rel="stylesheet" href="/css/mobile.css" media="only screen and (max-device-width: 480px)">
-</head>
+  </head>
