--- a/css/bitledger.css
+++ b/css/bitledger.css
@@ -25,7 +25,8 @@ h4 {
 }
 
 .text-footer .avatar {
-    background-image: url('/image/avatar.png');
+    background-image: url('http://www.gravatar.com/avatar/21874091836ab7d3a769c1a89a0702f3.png');
+    background-size: 100%;
     width: 60px;
     height: 60px;
     border-radius: 8px;
