--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,7 @@
 
     <link rel="alternate" type="application/rss+xml" title="The Bitledger Blog" href="http://bitledger.io/feed.xml">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+    <link rel="shortcut icon" type="image/x-icon" href="/img/block.png"/>
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic">
 
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
