--- a/css/bitledger.css
+++ b/css/bitledger.css
@@ -25,7 +25,7 @@ h4 {
 }
 
 .text-footer .avatar {
-    background-image: url('https://avatars1.githubusercontent.com/u/7751087?s=400');
+    background-image: url('/img/block.png');
     background-size: 100%;
     width: 60px;
     height: 60px;
