Update attribution URL

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,6 @@
         The Bitledger project aims to create a general-purpose <a href="/api">API</a> and toolkit for building Bitcoin-like systems on the JVM--and we're just getting started. Stay tuned!
       </section>
       <div class="copyright">
-        <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">The Bitledger Blog</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="mailto:chris@beams.io" property="cc:attributionName" rel="cc:attributionURL">Chris Beams</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.<br>
+        <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">The Bitledger Blog</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://chris.beams.io" property="cc:attributionName" rel="cc:attributionURL">Chris Beams</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.<br>
         Theme by <a href="http://winterbe.com">Benjamin Winterberg</a> reused with permission.
       </div>
