Update nav renaming {@bit_ledger => @bitledger}

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
           </h1>
 
           <div class="nav">
-              <a href="https://twitter.com/bit_ledger" title="@bit_ledger">
+              <a href="https://twitter.com/bitledger" title="@bitledger">
                   <i class="fa fa-twitter"></i>
               </a>
               <a href="https://github.com/cbeams/bitledger" title="cbeams/bitledger">
